--- a/src/blog/static/assets/css/blog.css
+++ b/src/blog/static/assets/css/blog.css
@@ -184,7 +184,16 @@ h1, h2, h3, h4, h5, h6 {
 .author_category_item {
     font-family:"Playfair Display", Georgia, "Times New Roman", serif /*rtl:Amiri, Georgia, "Times New Roman", serif;; */
 }
+
 /*-----Article Show------*/
+
+
+/*-----Add comment------*/
+.btn-clean {
+    background: #000;
+    color: #fff;
+}
+/*-----Add comment------*/
 
 
 /*-----Article List------*/
