--- a/src/blog/templates/blog/add_comment_to_article.html
+++ b/src/blog/templates/blog/add_comment_to_article.html
@@ -3,19 +3,34 @@
 {{ title }}
 {% endblock %}
 {% block content%}
-<div class="form">
-    <h1>Add comment</h1>
-    <br>
-    <div>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.comment_text }}
-            <br>
-            <button class="btn btn-lg btn-success">Add</button>
-            <button type="reset" class="btn btn-lg btn-danger">Clean</button>
-        </form>
+<div class="container_form">
+    <div class="form_body">
+        <center>
+            <h1>Add comment</h1>
+        </center>
         <br>
-        <a href="{% url 'blog:article_show' slug=article.slug %}">Back to Article</a>
+        <div>
+            <form method="POST">
+                {% csrf_token %}
+                <div class="form_body_item">
+                    {{ form.comment_text }}
+                    <br>
+                    <button class="form_body_item_btn btn  a_btn btn-outline-secondary ">
+                        Add
+                    </button>
+                    <button type="reset"
+                            class="form_body_item_btn btn  a_btn btn-outline-secondary btn-clean">
+                        Clean
+                    </button>
+                </div>
+            </form>
+            <br>
+            <center>
+                <a href="{% url 'blog:article_show' slug=article.slug %}">
+                    Back to Article
+                </a>
+            </center>
+        </div>
     </div>
 </div>
 {% endblock%}
