upgraded django, reworked form title in login and sign-up html, deleted button clean in add_comment_to_article.html, changed position button "add comment", deleted button clean in articles_list and contactus_form html

--- a/src/account/templates/account/login.html
+++ b/src/account/templates/account/login.html
@@ -38,7 +38,9 @@
     </center>
     <div class="container_form">
         <div class="form_body">
-            <h2>Log IN</h2>
+            <center>
+                <h2>Log IN</h2>
+            </center>
             <form method="post" action="{% url 'account:login' %}">
                 {% csrf_token %}
                 <div class="form_body_item">
