--- a/src/blog/templates/blog/add_comment_to_article.html
+++ b/src/blog/templates/blog/add_comment_to_article.html
@@ -18,10 +18,10 @@
                     <button class="form_body_item_btn btn  a_btn btn-outline-secondary ">
                         Add
                     </button>
-                    <button type="reset"
-                            class="form_body_item_btn btn  a_btn btn-outline-secondary btn-clean">
-                        Clean
-                    </button>
+<!--                    <button type="reset"-->
+<!--                            class="form_body_item_btn btn  a_btn btn-outline-secondary btn-clean">-->
+<!--                        Clean-->
+<!--                    </button>-->
                 </div>
             </form>
             <br>
