--- a/src/blog/templates/blog/about_us.html
+++ b/src/blog/templates/blog/about_us.html
@@ -5,10 +5,6 @@
 {% endblock%}
 {% block content%}
 <div class="content">
-    <h1>О нас</h1>
-    <div class="payload">
-        <em class="index_text">"Статьи о спорте и здоровье, советы по выбору инвентаря, экипировки, польза различных
-            видов спорта."</em>
-    </div>
+    <center><h1>About US</h1></center>
 </div>
 {% endblock%}
