--- a/src/blog/templates/blog/article/articles_list.html
+++ b/src/blog/templates/blog/article/articles_list.html
@@ -25,10 +25,10 @@
                         class="form_body_item_btn btn  a_btn btn-outline-secondary">
                     Search
                 </button>
-                <button type="reset"
-                        class="form_body_item_btn btn  a_btn btn-outline-secondary btn-clean">
-                    Clean
-                </button>
+<!--                <button type="reset"-->
+<!--                        class="form_body_item_btn btn  a_btn btn-outline-secondary btn-clean">-->
+<!--                    Clean-->
+<!--                </button>-->
             </form>
         </center>
     </div>
