--- a/src/blog/static/assets/css/blog.css
+++ b/src/blog/static/assets/css/blog.css
@@ -76,28 +76,33 @@
 }
 
 a {
-  text-decoration: none;
-  color: #000;
+    text-decoration: none;
+    color: #000;
 }
 
 a:hover {
-   color: red;
+    color: red;
 }
 
 .a_btn:hover {
     text-decoration: none;
 }
+
 /*--------------------*/
 
 
 /*-----Home page------*/
 .blog-header-logo {
-    font-family: "Playfair Display", Georgia, "Times New Roman", serif /*rtl:Amiri, Georgia, "Times New Roman", serif;;; */;
+    font-family: "Playfair Display", Georgia, "Times New Roman", serif
+        /*rtl:Amiri, Georgia, "Times New Roman", serif;;; */
+    ;
     font-size: 2.25rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Playfair Display", Georgia, "Times New Roman", serif /*rtl:Amiri, Georgia, "Times New Roman", serif;; */;
+    font-family: "Playfair Display", Georgia, "Times New Roman", serif
+        /*rtl:Amiri, Georgia, "Times New Roman", serif;; */
+    ;
 }
 
 .clamp {
@@ -127,6 +132,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     justify-content: space-between;
 }
+
 /*-----Home page------*/
 
 
@@ -148,7 +154,7 @@ h1, h2, h3, h4, h5, h6 {
 .form_body_item {
     padding: 10px;
     margin: 5px;
-    display:flex;
+    display: flex;
     flex-direction: column;
 }
 
@@ -173,6 +179,7 @@ h1, h2, h3, h4, h5, h6 {
     color: red;
     font-weight: bold;
 }
+
 /*-----Log in------*/
 
 
@@ -181,8 +188,10 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     justify-content: space-between;
 }
+
 .author_category_item {
-    font-family:"Playfair Display", Georgia, "Times New Roman", serif /*rtl:Amiri, Georgia, "Times New Roman", serif;; */
+    font-family: "Playfair Display", Georgia, "Times New Roman", serif
+        /*rtl:Amiri, Georgia, "Times New Roman", serif;; */
 }
 
 /*-----Article Show------*/
@@ -193,6 +202,7 @@ h1, h2, h3, h4, h5, h6 {
     background: #000;
     color: #fff;
 }
+
 /*-----Add comment------*/
 
 
@@ -200,6 +210,7 @@ h1, h2, h3, h4, h5, h6 {
 .continue_reading {
     font-weight: bold;
 }
+
 /*-----Article List------*/
 
 
@@ -230,6 +241,7 @@ h1, h2, h3, h4, h5, h6 {
     background-color: var(--bs-pagination-hover-bg);
     border-color: var(--bs-pagination-hover-border-color);
 }
+
 /*-----Pagination------*/
 
 
@@ -238,11 +250,14 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     justify-content: space-between;
 }
+
 /*-----Author------*/
 
 
 /*-----ContactUs------*/
 .contact_us {
-    height: none;
+    height: auto;
+    margin: 30px 0;
 }
+
 /*-----ContactUs------*/
